[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Resources/BattlePhase/Scenes/MissionSummaryPanel.gd" id="1_script"]

[node name="MissionSummaryPanel" type="PanelContainer"]
theme_type_variation = &"DarkPanel"
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResultBanner" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MISSION SUCCESSFUL"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TurnsLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle Duration: 5 Turns"

[node name="EnemiesLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemies Defeated: 8"

[node name="MVPLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MVP: Captain John (4 kills)"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="QuestLabel" type="Label" parent="MarginContainer/VBoxContainer/QuestContainer"]
layout_mode = 2
text = "Quest Progress"

[node name="QuestProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/QuestContainer"]
layout_mode = 2
value = 50.0

[node name="QuestStatus" type="Label" parent="MarginContainer/VBoxContainer/QuestContainer"]
layout_mode = 2
text = "Next Objective: Eliminate Target"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StoryPointsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Story Points Earned: +2"

[node name="RumorsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RumorsLabel" type="Label" parent="MarginContainer/VBoxContainer/RumorsContainer"]
layout_mode = 2
text = "New Rumors"

[node name="RumorsList" type="RichTextLabel" parent="MarginContainer/VBoxContainer/RumorsContainer"]
layout_mode = 2
fit_content = true
text = "• Strange signals detected in sector
• Merchant convoy seeking protection"
